--- a/pwdMng/src/main/resources/static/index.html
+++ b/pwdMng/src/main/resources/static/index.html
@@ -11,93 +11,87 @@
 </head>
 <body>
 <div id="user_exit">
-	<a href="login.html">退出</a>
+    <a href="login.html" onclick="loginOut()">退出</a>
 </div>
 <div class="wrap">
-    <button class="lang-btn search">查询</button>	
-    <button class="lang-btn add">添加</button>	
+    <button class="lang-btn search">查询</button>
+    <button class="lang-btn add">添加</button>
 </div>
 <table border="" cellspacing="" cellpadding="">
-	<tr>
-		<th>账号</th>
-		<th>密码</th>
-		<th>类型</th>
-		<th>手机号</th>
-		<th>操作</th>
-	</tr>
-
-	<tr>
-		<td>15222</td>
-		<td>14343</td>
-		<td>银行卡</td>
-		<td>15766228013</td>
-		<td onclick="editinfo()"><font color="cornflowerblue">编辑</font></td>
-	</tr>
+    <tr>
+        <th>ID</th>
+        <th>账号</th>
+        <th>密码</th>
+        <th>类型</th>
+        <th>手机号</th>
+        <th>操作</th>
+    </tr>
 </table>
-   <div class="form-data pos searchbox editinfo hide">
-   		<span class="close">X</span>
-        <div class="form1">
-            <p class="p-input pos">
-                <label for="code">用户名/账号</label>
-                <input type="text" id="code">
-                <span class="tel-warn num-err hide"><em>账号或密码错误，请重新输入</em><i class="icon-warn"></i></span>
-            </p>
-            <p class="p-input pos">
-                <label for="pass">请输入识别码</label>
-                <input type="password" style="display:none"/>
-                <input type="password" id="pass" autocomplete="new-password">
-                <span class="tel-warn pass-err hide"><em>账号或识别码错误，请重新输入</em><i class="icon-warn"></i></span>
-            </p>
-        </div>
-        <button class="lang-btn" onclick="searchbtn()">查询</button>
+<div class="form-data pos searchbox editinfo hide">
+    <span class="close">X</span>
+    <div class="form1">
+        <p class="p-input pos">
+            <label for="loginCode">用户名/账号</label>
+            <input type="text" id="loginCode">
+            <span class="tel-warn num-err hide"><em>账号或密码错误，请重新输入</em><i class="icon-warn"></i></span>
+        </p>
+        <p class="p-input pos">
+            <label for="key">请输入识别码</label>
+            <input type="password" style="display:none"/>
+            <input type="password" id="key" autocomplete="new-password">
+            <span class="tel-warn pass-err hide"><em>账号或识别码错误，请重新输入</em><i class="icon-warn"></i></span>
+        </p>
     </div>
+    <button class="lang-btn" onclick="queryPwd()">查询</button>
+</div>
 
-   <div class="form-data pos addbox hide">
-   		<span class="close">X</span>  	
-        <div class="formADD">
-            <p class="p-input pos">
-                <label for="use_name">用户名/账号</label>
-                <input type="text" id="use_name">
-            </p>
-            <p class="p-input pos">
-                <label for="use_password">密码</label>
-                <input type="text" id="use_password">
-            </p>
-            <p class="p-input pos">
-                <label for="use_type">用户名/类型</label>
-                <input type="text" id="use_type">
-            </p>
-            <p class="p-input pos">
-                <label for="use_mobile">手机号</label>
-                <input type="text" id="use_mobile">
-            </p>            
-        </div>
-        <button class="lang-btn log-btn" onclick="addBtn()">添加</button>
+<div class="form-data pos addbox hide">
+    <span class="close">X</span>
+    <div class="formADD">
+        <p class="p-input pos">
+            <label for="use_name">用户名/账号</label>
+            <input type="text" id="use_name">
+        </p>
+        <p class="p-input pos">
+            <label for="use_password">密码</label>
+            <input type="text" id="use_password">
+        </p>
+        <p class="p-input pos">
+            <label for="use_type">用户名/类型</label>
+            <input type="text" id="use_type">
+        </p>
+        <p class="p-input pos">
+            <label for="use_mobile">手机号</label>
+            <input type="text" id="use_mobile">
+        </p>
     </div>
+    <button class="lang-btn log-btn" onclick="addBtn()">添加</button>
+</div>
 
-   <div class="form-data pos editbox  hide">
-   		<span class="close">X</span>
-        <div class="formMod">
-            <p class="p-input pos">
-                <label for="use_name_m">用户名/账号</label>
-                <input type="text" id="use_name_m">
-            </p>
-            <p class="p-input pos">
-                <label for="use_password_m">密码</label>
-                <input type="text" id="use_password_m">
-            </p>
-            <p class="p-input pos">
-                <label for="use_type_m">用户名/类型</label>
-                <input type="text" id="use_type_m">
-            </p>
-            <p class="p-input pos">
-                <label for="use_mobile_m">手机号</label>
-                <input type="text" id="use_mobile_m">
-            </p>
-        </div>
-        <button class="lang-btn mod-btn" onclick="modBtn()">保存</button>
+<div class="form-data pos editbox  hide">
+    <span class="close">X</span>
+    <div class="formMod">
+        <p class="p-input pos">
+            <label for="use_name_m">用户名/账号</label>
+            <input type="text" id="use_name_m">
+        </p>
+        <p class="p-input pos">
+            <label for="use_password_m">密码</label>
+            <input type="text" id="use_password_m">
+        </p>
+        <p class="p-input pos">
+            <label for="use_type_m">用户名/类型</label>
+            <input type="text" id="use_type_m">
+        </p>
+        <p class="p-input pos">
+            <label for="use_mobile_m">手机号</label>
+            <input type="text" id="use_mobile_m">
+        </p>
     </div>
+    <button class="lang-btn mod-btn" onclick="modBtn()">保存</button>
+</div>
 <script src="./js/jquery.js"></script>
 <script src="./js/index.js"></script>
+<script src="./js/agree.js"></script>
 </body>
 </html>
